# TG-SignPulse

./: .gitignore  CLAUDE.md  Dockerfile  README.md  README_EN.md  docker-compose.panel.yml  docker-compose.yml  package-lock.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker.yml
backend/: CLAUDE.md  main.py
backend/core/: auth.py  config.py  database.py  pydantic_compat.py  security.py
backend/models/: account.py  task.py
backend/scheduler/: __init__.py  instance_lock.py  task_runner.py
backend/schemas/: batch.py  sign_batch.py  task_stats.py
backend/services/: backup_archive.py  config.py  device_keepalive.py  keyword_monitor.py  push_notifications.py  runtime_settings.py  sign_task_backend.py  sign_task_config_inspect.py  sign_task_failure.py  sign_task_history_format.py  sign_task_history_io.py  sign_task_message.py  sign_task_run_status.py  sign_task_text.py  sign_tasks.py  sign_tasks_package.md  tasks.py  telegram.py  webdav_client.py
backend/utils/: async_io.py  cache.py  memory_monitor.py  session_cache.py  task_logs.py  tg_session.py  time.py  version_info.py
docker/: entrypoint.sh  nginx.conf.example
docs/: README.md  SUMMARY.md  faq.md  features.md  index.md  vercel.json
docs/.vitepress/: config.mts
docs/deploy/: docker.md  nginx.md
docs/guide/: accounts.md  backup-webdav.md  keyword-monitor.md  quick-start.md  tasks.md
docs/reference/: architecture.md  configuration.md  development.md  device-management.md  ops.md
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts  (+1 more)
scripts/: backup.sh  fix_tg_import_order.py  patch_telegram_session_imports.py  pre-push  prod_boundary_check.py  split_keyword_monitor.py  split_telegram_mixins.py  wire_core_client.py
tests/: __init__.py  conftest.py  test_ai_config.py  test_ai_tools.py  test_api.py  test_async_io.py  test_cache.py  test_concurrency_default.py  test_config.py  test_core.py  test_exception_handler.py  test_jwt_lifecycle.py  test_keyword_monitor.py  test_legacy_tasks_readonly.py  test_log_optimization.py  test_memory_monitor.py  test_monitor_sharding.py  test_notify_and_settings_extended.py  test_ops_version.py  test_pydantic_compat_and_scale.py  test_runtime_settings.py  test_session_cache.py  test_sign_batch_and_ops.py  test_sign_task_history_format.py  test_sign_task_history_io.py  test_sign_task_run_status.py  test_sign_task_text_and_config.py  test_task_log_capture.py  test_totp_replay.py  test_utils.py  test_utils_extra.py  test_version_info.py  test_webdav_client.py
tg_signer/: ai_tools.py  compat.py  config.py  core.py  log_utils.py  logger.py  pydantic_compat.py  security.py
tools/: check_legacy_tasks.py
(+105 files in other folders)
